@@ -1,5 +1,12 @@
 2007-08-28  Tobias C. Rittweiler <tcr@freebits.de>
 
+	* swank.lisp (classify-symbol, symbol-classification->string):
+	Resurrected in swank.lisp. (I was bitten by cvs-pcl which
+	committed (2007-08-27) my locally changed `contribs/swank-fuzzy.lisp'
+	where I already removed these functions from.)  
+
+2007-08-28  Tobias C. Rittweiler <tcr@freebits.de>
+
 	* slime.el (slime-make-form-spec-from-string): Elisp Hacking 101:
 	Don't use `beginning-of-buffer' and `end-of-buffer' in Elisp code.
 
